--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -5,6 +5,8 @@
     padding: 15px 15px;  
     position: fixed;
     z-index:9999;
+    width: 100%;
+    background-color: white;
 }
 
 .nav-logo{
@@ -49,4 +51,63 @@ button{
 button:hover{
 background-color:orange;
     color: white;
+}
+
+.menu-icons {
+    display: none;
+    cursor: pointer;
+}
+
+@media screen (max-width: 850px) {
+
+    .menu-icons {
+        display: block;
+    }
+
+    .nav-menu {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        background-color: black;
+        width: 100%;
+        height: auto;
+        position: absolute;
+        top: 0;
+        left: -100%;
+        opacity: 0;
+        align-items: stretch;
+        padding: 80px 0 30px 0;
+        margin: 0;
+        transition: 3ms ease-in-out;
+    }
+
+    .nav-menu.active {
+        left: 0;
+        opacity: 1;
+        z-index: -1;
+        transition: 3ms ease-in-out ;
+    }
+
+    .nav-menu a{
+        display: block;
+        text-align: center;
+        padding: 1.5rem;
+        margin: auto;
+        border-radius: 15px;
+        width: 80%;
+        background-color: orange;
+        color: white;
+        text-decoration: none;
+        font-size: 1.2rem;
+        font-weight: 700;
+        letter-spacing: 2px;
+    }
+
+    .nav-menu:hover a {
+        background-color: white;
+        color: black;
+        transition: none;
+    }
+
+    
 }
